--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,4 +1,7 @@
 .navbar {
-    flex: 6;
-    align-items: flex-start;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    height: 70px;
 }
