--- a/client/src/displays/admin/pages/accountManagement/accountManagement.css
+++ b/client/src/displays/admin/pages/accountManagement/accountManagement.css
@@ -2,7 +2,11 @@
 
 .accountManagement {
     display: flex;
-    max-width: 100vw;
-    padding: 0;
-    /* height: 100vh; */
+    height: 97%;
+    width: 97%;
+    background: rgba(255, 255, 255, 0.54);
+    border-radius: 2rem;
+    gap: 16px;
+    grid-template-columns: 11rem auto 20rem;
+    overflow: hidden;
 }
