--- a/client/src/displays/distributor/pages/Sidebar/sidebar.css
+++ b/client/src/displays/distributor/pages/Sidebar/sidebar.css
@@ -64,8 +64,18 @@ span {
     margin-left: 10px;
 }
 
-.active {
-    background: #ece8ff;
+a.active>li {
+    background: #ece8ff; 
+    margin-left: 0px;
+    position: relative;
+}
+a.active>li::before{
+    content: ' ';
+    left: 0%;
+    width: 7px;
+    height: 97%;
+    position: absolute;
+    background: #08d936;
 }
 
 @media screen and (max-width: 1100px) {
