--- a/client/src/displays/admin/admin.css
+++ b/client/src/displays/admin/admin.css
@@ -19,8 +19,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+
 }
+
+
 
 p {
     margin: 0;
+}
+
+.recharts-wrapper {
+    position: initial;
 }
