--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -30,7 +30,9 @@ img {
     left: 0;
     right: 0;
     bottom: 0;
-    position: fixed;
+    position: absolute ;
+    backface-visibility: hidden;
+    z-index: 1;
 }
 
 .model {
@@ -52,7 +54,12 @@ img {
     border-radius: 10px;
     max-width: 600px;
     min-width: 300px;
+    z-index: 2;
 }
+
+
+
+
 
 .avatarWrapper {
     display: flex;
