--- a/client/src/displays/admin/pages/accounts/accounts.css
+++ b/client/src/displays/admin/pages/accounts/accounts.css
@@ -10,27 +10,15 @@
     overflow: hidden;
 }
 
-
 .mainAccount {
     display: flex;
     flex-direction: column;
 }
 
 .navAccount {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-
-}
-
-button {
-    margin-left: 7rem;
-    border: 0.5px solid lightgray;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.54);
-    font-weight: 600;
-    color: #888;
-
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 button:hover{
@@ -38,44 +26,48 @@ button:hover{
 }
 
 
+.row {
+    margin-right: auto;
+    /* margin-top: 10px; */
+    padding: 5px 25px;
+    width: 100%;
 
-.searchAccount {
-    margin-top: 10px;
-    margin-right: 60px;
-    margin-bottom: 10px;
-    padding: 3px;
-    
+}
 
-    display: flex;
-    align-items: center;
+.row1 {
+    margin-bottom: 5px;
+}
+
+.submit, .createAccount {
+    float: right;
+    height: 60px;
+    width: 120px;
     border: 0.5px solid lightgray;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.54);
-
-}
-
-input {
-    border: none;
-    outline: none;
-    background: rgba(255, 255, 255, 0.54);
-}
-
-input[placeholder] {
-    padding-left: 10px;
-}
-
-.searchIcon {
-    color: #7451f8;
-    font-size: 20px;
-}
-
-.listAccount {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
+    font-weight: 600;
+    color: #888;
 }
 
 
+
+input[type="text"],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  /* margin: 8px 0; */
+  border-radius: 10px;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+.submit {
+    height: 40px;
+    width: 80px !important;
+    margin-top: 40px !important;
+}
+
+/* 
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -108,7 +100,7 @@ input[placeholder] {
     position: absolute;
     top: 40%;
     left: 50%;
-    margin-top: 40px;
+    margin-top: 60px;
     transform: translate(-50%, -50%);
     line-height: 1.4;
     background: #f1f1f1;
@@ -116,7 +108,7 @@ input[placeholder] {
     border-radius: 10px;
     max-width: 600px;
     min-width: 300px;
-}
+} */
 
 .abc {
     margin-top: 10px;
@@ -132,16 +124,4 @@ input[placeholder] {
     width: 60px;
 }
 
-@media screen and (max-width: 840px) {
-    /* .navAccount {
-        justify-content: flex-start;
-    }
 
-    .searchAccount {
-        margin-left: calc(100vw - 50px - 347px );
-    }
-
-    .createAccount {
-        margin-left: calc(100vw - 50px - );
-    } */
-}
