--- a/client/src/displays/distributor/pages/Orders/order.css
+++ b/client/src/displays/distributor/pages/Orders/order.css
@@ -40,9 +40,38 @@
 .orderDetail {
     width: 100%;
     height: 80%;
-    background: lightgray;
+    /* background: lightgray; */
+    background: #ffdefd !important;
     margin-right: 10px;
 }
+
+.oderContent {
+    display: flex;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    align-items: center;
+    justify-content: center;
+}
+.rowOrder {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 90%;
+    height: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    border-bottom: 0.5px solid lightgray;
+    line-height: 40px;
+}
+
+.firstRow {
+    margin-top: 45px;
+}
+
+
 .createOrder {
     margin-top: 20px;
     margin-left: 0;
