--- a/client/src/displays/distributor/pages/Orders/order.css
+++ b/client/src/displays/distributor/pages/Orders/order.css
@@ -29,6 +29,12 @@
     border-right: 0.5px solid lightgray;
 }
 
+.listOrder  > h4 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .mainOrder {
     flex: 1;
     margin-left: 10px;
