--- a/client/src/displays/manufactureFactory/pages/orders/order.css
+++ b/client/src/displays/manufactureFactory/pages/orders/order.css
@@ -1,6 +1,6 @@
 
 
-.order {
+.order3 {
     display: flex;
     height: 97%;
     width: 97%;
@@ -10,7 +10,7 @@
     overflow: hidden;
 }
 
-.wrapper {
+.wrapper3 {
     flex: 6;
     padding: 0;
     height: 100%;
@@ -18,18 +18,24 @@
     flex-direction: column;
 }
 
-.orderWrapper {
+.orderWrapper3 {
     display: flex;
     margin-left: 10px;
     height: 100%;
 }
 
-.listOrder {
+.listOrder3 {
     flex: 2;
     border-right: 0.5px solid lightgray;
 }
 
-.mainOrder {
+.listOrder3  > h4 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.mainOrder3 {
     flex: 1;
     margin-left: 10px;
     display: flex;
@@ -37,13 +43,42 @@
     align-items: center;
 }
 
-.orderDetail {
+.orderDetail3 {
     width: 100%;
     height: 80%;
-    background: lightgray;
+    /* background: lightgray; */
+    background: #ffdefd !important;
     margin-right: 10px;
 }
-.createOrder {
+
+.oderContent3 {
+    display: flex;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    align-items: center;
+    justify-content: center;
+}
+.rowOrder3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 90%;
+    height: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    border-bottom: 0.5px solid lightgray;
+    line-height: 40px;
+}
+
+.firstRow3 {
+    margin-top: 45px;
+}
+
+
+.acceptOrder3 {
     margin-top: 20px;
     margin-left: 0;
     height: 40px;
@@ -51,7 +86,7 @@
 }
 
 @media screen and (max-width: 940px) {
-    .mainOrder {
+    .mainOrder3 {
         display: none;
     }
 }
