--- a/client/src/displays/signIn/signIn.css
+++ b/client/src/displays/signIn/signIn.css
@@ -101,7 +101,7 @@ input {
 .signInBox div {
     margin-bottom: 1rem!important;
 }
-.icon{
+.iconSignin{
     font-size: 100%;
     display: inline;
     color: rgb(105 71 233);
