--- a/client/src/displays/manufactureFactory/pages/defectiveProducts/defective.css
+++ b/client/src/displays/manufactureFactory/pages/defectiveProducts/defective.css
@@ -1,6 +1,5 @@
 
-
-.order {
+.products {
     display: flex;
     height: 97%;
     width: 97%;
@@ -10,48 +9,84 @@
     overflow: hidden;
 }
 
-.wrapper {
-    flex: 6;
-    padding: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.orderWrapper {
-    display: flex;
-    margin-left: 10px;
-    height: 100%;
-}
-
-.listOrder {
-    flex: 2;
-    border-right: 0.5px solid lightgray;
-}
-
-.mainOrder {
-    flex: 1;
-    margin-left: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.orderDetail {
-    width: 100%;
-    height: 80%;
-    background: lightgray;
-    margin-right: 10px;
-}
-.createOrder {
+.mainProduct {
     margin-top: 20px;
-    margin-left: 0;
-    height: 40px;
-    /* cursor: pointer; */
+    
 }
 
-@media screen and (max-width: 940px) {
-    .mainOrder {
-        display: none;
+.addProduct {
+    display: flex;
+    width: 70%;
+    justify-content:flex-start;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.addProduct > button {
+    border-radius: 10px;
+    height: 50px;
+    width: 100px;
+    border: 0.5px solid lightgray;
+}
+
+.addProduct > button:hover {
+    background: lightgray;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
     }
+    to {
+        opacity: 1;
+    }
+}
+
+.modelProduct, .overlayProduct {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+} 
+
+.overlayProduct {
+    background: rgba(49,49,49,0.8);
+}
+.modelProduct {
+    animation: fadeIn ease-in 0.3s;
+}
+
+.contentProduct {
+    transform: translate(-50%, -50%);
+}
+
+.row {
+    margin-top: 10px;
+}
+
+label > input, label > select {
+    border-radius: 10px;
+    height: 40px;
+    margin-top: 5px !important;
+}
+
+label > select {
+    height: 40px;
+    padding: 6px;
+}
+
+input[type="submit"] {
+    float: right;
+    margin-right: 30px;
+    margin-top: 40px;
+    border-radius: 10px;
+    height: 30px;
+    background: rgb(190, 190, 190);
+}
+
+input.submit:hover {
+    background: rgb(146, 146, 146);
 }
