--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -73,6 +73,12 @@ img {
     width: 70px;
 }
 
+.avatar {
+    height: 60px;
+    width: 60px;
+    margin-top: 10px;
+}
+
 h3 {
     padding-top: 10px;
     /* font-size: 15px; */
