--- a/client/src/displays/admin/pages/sidebar/sidebar.css
+++ b/client/src/displays/admin/pages/sidebar/sidebar.css
@@ -11,10 +11,10 @@
 
 }
 
-ul{
+div.center ul{
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 0rem;
     width: 100%;
 }
 
@@ -52,9 +52,9 @@ ul :hover {
     font-size: 30px;
 }
 
-.iconlogout {
+/* .iconlogout {
     margin-left: 30px;
-}
+} */
 
 
 span {
@@ -63,7 +63,13 @@ span {
     color: #888;
     margin-left: 10px;
 }
-
+div.logout button {
+    font-size: 15px;
+    font-weight: 600;
+    color: #888;
+    width: 100%;
+    border: none;
+}
 a.active>li {
     background: #ece8ff; 
     margin-left: 0px;
