--- a/client/src/displays/signIn/signIn.css
+++ b/client/src/displays/signIn/signIn.css
@@ -128,6 +128,7 @@ span.spanSI {
     background-color: #7269ef;
     margin-top: 1.25rem;
     margin: auto;
+    display: unset;
 }
 
 .signInButton:hover {
