--- a/client/src/components/charts/barChart/barChart.css
+++ b/client/src/components/charts/barChart/barChart.css
@@ -1,4 +1,16 @@
 
+.chart {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.legend-item-0 {
+    padding: 0px !important;
+    height: 30px;
+}
+
 @media screen and (max-width: 555px) {
     .chartMain {
         width: 300px;
